2009-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_set_video_property):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_set_video_property): Patch from
	Anssi Hannula <anssi@mandriva.org> to avoid
	reseting the colour balance sliders when they're
	at the maximum or minimum (Closes: #567279)

2009-01-13  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add application/vnd.ms-wpl
	as a supported playlist

2009-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (totem_add_to_playlist_and_play):
	Fix totem_add_to_playlist_and_play() to add files to
	the playlist and play them, even if the playlist is empty,
	spotted by Philip Withnall <philip@tecnocode.co.uk>
	(Closes: #563961)

2009-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_metadata_string):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_get_metadata_string):
	Remove linefeeds from strings, and replace them by spaces
	(Closes: #566455)

2009-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_uri_get_subtitle_for_uri):
	Reduce the scope of subtitle_ext_upper

2009-01-06  Bastien Nocera  <hadess@hadess.net>

	* data/mime-functions.sh: Remove PLS and M3U files
	from the audio types, remove XSPF, SMIL, Google Video
	Pointers and Quicktime Media Links from the video types

2009-01-06  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add audio/x-gsm

2009-01-04  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mime-type-include.sh:
	* lib/totem-scrsaver.c:
	* src/backend/bacon-resize.c:
	* src/backend/bvw-test.c (test_bvw_set_mrl):
	* src/backend/video-utils.c (totem_time_to_string):
	* src/plugins/gromit/totem-gromit.c
	(totem_gromit_ensure_config_file):
	* src/plugins/media-player-keys/totem-media-player-keys.c:
	* src/plugins/ontop/totem-ontop.c: