@@ -186,3 +186,18 @@ begin
 	config = mute
 end
 
+begin
+	prog = Totem
+	remote = *
+	button = KEY_SHUFFLE
+	repeat = 1
+	config = setting_shuffle
+end
+
+begin
+	prog = Totem
+	remote = *
+	button = KEY_MEDIA_REPEAT
+	repeat = 1
+	config = setting_repeat
+end
