@@ -1,5 +1,13 @@
 2009-01-13  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/lirc/totem-lirc.c (totem_lirc_to_setting),
+	(totem_lirc_read_code):
+	* src/plugins/lirc/totem_lirc_default: Patch from
+	Vidar Braut Haarr <vhaarr+bgo@gmail.com> to support
+	repeat and shuffle through LIRC (Closes: #567258)
+
+2009-01-13  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c
 	(bacon_video_widget_set_video_property):
 	* src/backend/bacon-video-widget-xine.c
